--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="who__content__inner__txt">
 							<img src="./image/check.png"><p class="ml-20">新サービス・新商品のサポートを全て任せたい</p>
 						</div>
-						<img class="who__content__inner__image" src="./image/girl.png">
+						<img class="who__content__inner__image" src="./image/woman.png">
 				</div>
 			</div>
 		</div>
