--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="cta">
 			<div class="cta__content">
 				<img class="only-desktop" src="./image/cta_pc.svg">
-				<img class="only-mobile" src="./image/cta_sp.png">
+				<img class="only-mobile" src="./image/cta_sp.svg">
 			</div>
 		</div>
 
